--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,11 @@
     color: white;
 }
 
+.table .thead-dark th{
+    background-color: black;
+    color: white;
+}
+
 
 /* 
     ID Selectors
@@ -27,10 +32,12 @@
     border-width: 1px;
     border-color: black;
     margin-bottom: 3%;
+    border-radius: 5px;
 }
   
 #add-train-form {
     border-style: solid;
     border-width: 1px;
     border-color: black;
+    margin-bottom: 3%;
 }
